# echo

./: .dockerignore  .gitignore  .pipauditignore  .trivyignore  README.md  contributors.yml  digitalocean-valkey-migration-issue.md  run_all_tests.ps1
.claude/: settings.local.json
dembrane-go/: .gitignore  APP_REVIEW.md  DESIGN.md  FEATURE_PARITY.md  Makefile  README.md  TESTFLIGHT.md  project.yml
docs/: .gitignore  README.md  README.nl-NL.md  agentic-chat-mvp.md  agentic-vfs-design.md  agentic-vfs-goals.md  build.sh  dembrane-product-context.md  manifest.json  map.md
echo/: .gitignore  AGENTS.md  CLAUDE.md  QUERY_OPTIMIZATION_SUMMARY.md  check-code.sh  check-later.md  docker-compose.coolify.yml  mprocs.yaml  readme.md  run-all.sh  setup.sh  (+1 more)
echo-functional-tests/: .env.sample  README.md  commonUtils.ts  package.json  playwright.config.ts  tsconfig.json
echo-user-docs/: package.json  pnpm-lock.yaml  theme.config.tsx
echo/agent/: .env.sample  Dockerfile  README.md  agent.py  auth.py  echo_client.py  knowledge.py  main.py  pyproject.toml  settings.py  stream_utils.py
echo/agent/context/: dembrane.md
echo/agent/skills/: interviewing.md  project-onboarding.md
echo/agent/tests/: test_agent_graph.py  test_agent_tools.py  test_auth.py  test_echo_client.py  test_knowledge.py  test_main_routes.py  test_settings.py  test_stream_utils.py
echo/tools/usage-tracker/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  env.example  pyproject.toml  run.sh
echo/tools/usage-tracker/src/usage_tracker/: __init__.py  data_fetcher.py  directus_client.py  llm_insights.py  metrics.py  pdf_export.py  settings.py
echo/tools/usage-tracker/src/usage_tracker/prompts/: __init__.py  chat_analysis_system.j2  chat_analysis_user.j2  dashboard_system.j2  dashboard_user.j2  executive_summary_system.j2  executive_summary_user.j2  insights_system.j2  insights_user.j2  monthly_overview_system.j2  monthly_overview_user.j2  stratified_chat_system.j2  stratified_chat_user.j2  timeline_system.j2  timeline_user.j2  user_profile_system.j2  user_profile_user.j2
(+2419 files in other folders)
