[project]
name = "echo-agent"
version = "0.1.0"
description = "Isolated CopilotKit runtime for Echo Agentic Chat"
requires-python = ">=3.11"
dependencies = [
    "copilotkit>=0.1.94,<0.2",
    "langgraph>=0.2",
    "langchain-google-vertexai>=3.2.2",
    "google-auth>=2.35",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "cryptography>=46.0.5",
    "idna>=3.11",
    "langchain>=1.2.10",
    "langchain-core>=1.2.11",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-sdk>=0.3.5",
    "langsmith>=0.7.1",
    "pyasn1>=0.6.2",
    "pygments>=2.19.2",
    "requests>=2.32.5",
    "starlette>=0.46.2",
    "urllib3>=2.6.3",
]

[tool.uv]
package = false
